infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: moderation-depl # the name of the deployment (which you see in logs etc.)
spec:
    replicas: 1 # the number of pods we are trying to create
    selector: # you are telling the deployment to look for a pod that has the key value pair of app=moderation
        matchLabels:
            app: moderation
    template: # you are telling the deployment to create a pod with specific name (app=moderation)
        metadata:
            labels:
                app: moderation
        spec: # config of the pod you are trying to make
            containers:
                - name: moderation
                  image: lyugaloki/moderation
---
# --- means create a new config for separate object
apiVersion: v1
kind: Service
metadata:
    name: moderation-srv
spec:
    selector:
        app: moderation # Choose the key-value pair that matches the name (template) of the moderation deployment/pod
    type: ClusterIP
    ports:
        - name: moderation
          protocol: TCP
          port: 4003
          targetPort: 4003
