infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: posts-srv
spec:
    type: NodePort
    selector:
        app: posts # telling service to expose pods with app=posts to outside world
    ports: # list out all the ports we want to expose
        - name: posts
          protocol: TCP
          port: 4000 # port of the NodePort service (and there is also a port for NodePort service, typically port number: 30xxxx <- this is the port that is exposed to outside world)
          targetPort: 4000 # ultimate port we want to redirect the traffic to (Posts microservice is lisetening on port 4000 so we should set this to 4000)
