infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: query-depl # the name of the deployment (which you see in logs etc.)
spec:
    replicas: 1 # the number of pods we are trying to create
    selector: # you are telling the deployment to look for a pod that has the key value pair of app=query
        matchLabels:
            app: query
    template: # you are telling the deployment to create a pod with specific name (app=query)
        metadata:
            labels:
                app: query
        spec: # config of the pod you are trying to make
            containers:
                - name: query
                  image: lyugaloki/query
---
# --- means create a new config for separate object
apiVersion: v1
kind: Service
metadata:
    name: query-srv
spec:
    selector:
        app: query # Choose the key-value pair that matches the name (template) of the query deployment/pod
    type: ClusterIP
    ports:
        - name: query
          protocol: TCP
          port: 4002
          targetPort: 4002
